# pong-sdl3

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
include/: gameConstants.hpp  gameRect.hpp
src/: main.cpp
